--- a/.github/workflows/03-core-features--05-environment-variables.yaml
+++ b/.github/workflows/03-core-features--05-environment-variables.yaml
@@ -14,9 +14,9 @@ jobs:
         env:
           STEP_VAR: I_AM_STEP_SCOPED
         run: |
-          echo "WORKFLOW_VAR: $WORKFLOW_VAR"   # visible
-          echo "JOB_VAR:      $JOB_VAR"        # visible
-          echo "STEP_VAR:     $STEP_VAR"       # visible only here
+          echo "WORKFLOW_VAR: $WORKFLOW_VAR"         # visible
+          echo "JOB_VAR:      $JOB_VAR"              # visible
+          echo "STEP_VAR:     ${STEP_VAR:-<UNSET>}"  # visible only here
 
       - name: Inspect scopes job 1 step 2
         run: |
@@ -29,6 +29,6 @@ jobs:
     steps:
       - name: Inspect scopes job 2 step 2
         run: |
-          echo "WORKFLOW_VAR: $WORKFLOW_VAR"                 # still visible
-          echo "JOB_VAR:      ${FOO:-<UNSET>}"               # not set here
-          echo "STEP_VAR:     ${STEP_VAR:-<UNSET>}"          # not set here
+          echo "WORKFLOW_VAR: $WORKFLOW_VAR"         # still visible
+          echo "JOB_VAR:      ${FOO:-<UNSET>}"       # not set here
+          echo "STEP_VAR:     ${STEP_VAR:-<UNSET>}"  # not set here
